<resources>
    <string name="app_name">Journal</string>
    <string name="search_hint">Поиск</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="birthday">День рождения</string>
    <string name="service">Услуга</string>
    <string name="price">Цена</string>
    <string name="day_of_visit">День посещения</string>
    <string name="extra_info">Краткое примечание</string>
    <string name="other">Примечание</string>
    <string name="discount">Скидка</string>
    <string name="submit">Добавить</string>
    <string name="full_name">ФИО</string>
    <string name="time_of_visit">Время посещения</string>
    <string name="phoneNum">Номер телефона</string>
    <string name="delete">Удалить</string>
    <string name="change">Изменить</string>
</resources>
