<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constaitLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="Autofill,LabelFor" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"

        android:layout_marginBottom="10dp"
        android:id="@+id/scrollView3">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="10dp"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="411dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/service"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="145dp" />

            <EditText
                android:id="@+id/t_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textAutoComplete"
                />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="145dp" />

            <EditText
                android:id="@+id/t_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned" />

            <TextView
                android:id="@+id/day_of_visit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day_of_visit"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="145dp" />

            <TextView
                android:id="@+id/t_day_of_visit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="20sp"
                android:paddingTop="9dp"
                android:ems="10"
                />

            <TextView
                android:id="@+id/time_of_visit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_of_visit"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="145dp" />

            <TextView
                android:id="@+id/t_time_of_visit"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="20sp"
                android:paddingTop="9dp"
                android:ems="10"
                />

            <TextView
                android:id="@+id/discount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/discount"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="145dp" />

            <EditText
                android:id="@+id/t_discount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberSigned" />

            <TextView
                android:id="@+id/extra_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/extra_info"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="145dp" />

            <EditText
                android:id="@+id/t_extra_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="180dp"
                tools:layout_editor_absoluteY="82dp" />

            <TextView
                android:id="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="145dp" />

            <EditText
                android:id="@+id/t_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>