<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constaitLay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="Autofill,LabelFor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"

        android:layout_marginBottom="10dp"
        android:id="@+id/scrollView3">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginEnd="10dp"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="411dp"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <TextView
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/surname"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="145dp" />

            <EditText
                android:id="@+id/t_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="180dp"
                tools:layout_editor_absoluteY="82dp"
                />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="82dp" />

            <EditText
                android:id="@+id/t_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="180dp"
                tools:layout_editor_absoluteY="145dp" />

            <TextView
                android:id="@+id/patronymic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/patronymic"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="145dp" />

            <EditText
                android:id="@+id/t_patronymic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                tools:layout_editor_absoluteX="180dp"
                tools:layout_editor_absoluteY="82dp" />

            <TextView
                android:id="@+id/discount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phoneNum"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="145dp" />

            <com.github.pinball83.maskededittext.MaskedEditText
                android:id="@+id/t_phoneNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                app:mask="+7(***)-***-**-**"
                app:notMaskedSymbol="*"
                android:inputType="phone"
                android:digits="01234567890()- "
                tools:layout_editor_absoluteX="180dp"
                tools:layout_editor_absoluteY="82dp" />

            <TextView
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textAlignment="viewStart"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="145dp" />

            <TextView
                android:id="@+id/t_birthday"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:textSize="20sp"
                android:paddingTop="9dp"
                android:ems="10"
                />

            <Button
                android:id="@+id/change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>